# cavapy

./: .Rhistory  .gitignore  PACKAGING.md  README.md  bench_parallel.py  cava_bias.py  cava_config.py  cava_download.py  cava_validation.py  cavapy.py  pyproject.toml  setup.py
cavapy/: __init__.py  cava_config.py  cava_download.py  cava_plot.py  cava_validation.py  cavapy.py
docs/superpowers/specs/: 2026-03-19-cavapy-logo-design.md
notebook/: demo.ipynb
recipe/: meta.yaml
tests/: test_imports.py
