[tool.poetry]
name = "cavapy"
version = "1.0.1"
description = "CAVA Python package. Retrive climate data."
authors = ["Riccardo Soldan <riccardosoldan@hotmail.it>", "Oleh Lokshyn <olokshyn@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Risk-Team/cavapy"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
xclim = "*"
xsdba = "*"
matplotlib = "*"
netcdf4 = "*"
pydap = "*"
dask = "*"
bottleneck = "*"
llvmlite = "*"
cartopy = "*"
seaborn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
